2008-06-20  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* vapi/packages/gstreamer-0.10/gstreamer-0.10.metadata:

	Correct the bindings for gst_tag_list_get_*(), fixes bug 538926

	* vapi/gstreamer-0.10.vapi: regenerated

2008-06-20  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am:
	* vapi/loudmouth-1.0.vapi:
	* vapi/packages/loudmouth-1.0/:

	Add loudmouth-1.0 bindings, patch by Ali Sabil

2008-06-20  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegeneratorsignal.vala:

	Fix ref and out signal parameters

2008-06-18  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Fix g_source_attach binding

2008-06-18  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/poppler-glib/:

	Fix poppler_document_new_from_file binding

	* vapi/poppler-glib.vapi: regenerated

2008-06-18  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/gtk+-2.0.metadata:

	Fix GtkMenuShell.children and gtk_menu_shell_append bindings

	* vapi/gtk+-2.0.vapi: regenerated

2008-06-18  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gio-2.0/gio-2.0.metadata:

	Various GFile binding fixes

	* vapi/gio-2.0.vapi: regenerated

2008-06-18  Jaap A. Haitsma  <jaap@haitsma.org>

	* vapi/packages/gstreamer-0.10/gstreamer-0.10-custom.vala:
	* vapi/packages/gstreamer-0.10/gstreamer-0.10.metadata:
	Fix Gst.object.ref, unref and sink bindings
	Fixes bug #536307	

	* vapi/gstreamer-0.10.vapi: regenerated

2008-06-17  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Fix gst_bin_add binding, fixes bug 538845

	* vapi/gstreamer-0.10.vapi: regenerated

2008-06-17  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala:

	Allow transformation of implicit array parameters to out or ref
	parameters

2008-06-17  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:

	Support duplicating errors

2008-06-17  Jürg Billeter  <j@bitron.ch>

	* vala/valasymbol.vala:
	* gobject/valaccodeobjecttypesymbolbinding.vala:

	Use CamelCase for methods and signals exported to D-Bus,
	fixes bug 538818