@@ -1,3 +1,10 @@
+2008-06-20  Jürg Billeter  <j@bitron.ch>
+
+	* vapigen/valagidlparser.vala:
+
+	Support 'cheader_filename' attribute for constants and
+	errordomains, based on patch by Michael Lawrence, fixes bug 533634
+
 2008-06-20  Zeeshan Ali Khattak  <zeenix@gmail.com>
 
 	* vapi/packages/gstreamer-0.10/gstreamer-0.10.metadata:
